--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,12 +1,13 @@
 body {
-  font-family: 'Mulish';
+  font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 1.2;
   position: relative;
   margin: 0;
-  background-color: #dcdcdc;
+  background-color: #fff;
   scroll-behavior: smooth;
-  color: #000;
+  color: #232323;
+  font-size: 16px;
 }
 
 h1,
