--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -5,6 +5,8 @@ body {
   position: relative;
   margin: 0;
   background-color: #fff;
+  // background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
+  //   url(../images/bg-registration.jpg);
   scroll-behavior: smooth;
   color: #232323;
   font-size: 16px;
