--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -4,9 +4,7 @@ body {
   line-height: 1.2;
   position: relative;
   margin: 0;
-  background-color: #fff;
-  // background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
-  //   url(../images/bg-registration.jpg);
+  background-color: #f0fff0;
   scroll-behavior: smooth;
   color: #232323;
   font-size: 16px;
